--- a/vragen.html
+++ b/vragen.html
@@ -14,6 +14,7 @@
   <ul id="kon">
     <li id="kan"><a id="kan" href="index.html">Home</a></li>
     <li id="kan"><a id="kan" href="vragen.html">Vragen</a></li>
+    <li id="kan"><a id="kan" href="politiek.html">Politiek</a></li>
     <li id="kan"><a id="kan" href="index2.0.html">Joro Nieuws</a></li>
   </ul>
 </nav>
