--- a/index2.0.html
+++ b/index2.0.html
@@ -15,6 +15,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="vragen.html">Vragen</a></li>
+        <li><a href="politiek.html">Politiek</a></li>
         <li><a href="index2.0.html">Joro Nieuws</a></li>
       </ul>
     </nav>
